--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.nsappcontestvue"
+    "id": "org.nativescript.nsappcontestvue",
+    "tns-android": {
+      "version": "3.1.1"
+    }
   },
   "dependencies": {
     "nativescript-theme-core": "~1.0.4",
     "nativescript-vue": "^0.1.1",
-    "tns-core-modules": "^3.0.0",
+    "tns-core-modules": "^3.1.0",
     "vue-router": "^2.4.0"
   },
   "devDependencies": {
@@ -17,6 +20,8 @@
     "babel-types": "6.24.1",
     "babylon": "6.16.1",
     "lazy": "1.0.11",
-    "nativescript-dev-android-snapshot": "^0.*.*"
+    "nativescript-dev-android-snapshot": "^0.*.*",
+    "nativescript-dev-typescript": "^0.5.0",
+    "typescript": "^2.4.1"
   }
 }
