--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "id": "org.nativescript.nsappcontestvue",
     "tns-android": {
       "version": "3.1.1"
+    },
+    "tns-ios": {
+      "version": "3.1.0"
     }
   },
   "dependencies": {
@@ -22,6 +25,6 @@
     "lazy": "1.0.11",
     "nativescript-dev-android-snapshot": "^0.*.*",
     "nativescript-dev-typescript": "^0.5.0",
-    "typescript": "^2.4.1"
+    "typescript": "~2.3.1"
   }
 }
