--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     }
   },
   "dependencies": {
+    "nativescript-plugin-firebase": "^4.0.3",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-vue": "^0.1.1",
     "tns-core-modules": "^3.1.0",
